# Mandelbrot

./: .gitignore  .gitingore  CMakeLists.txt  README.md  allow.sh  build.sh
src/: MacBuild  appmanager.cpp  appmanager.hpp  build_mac.sh  element.cpp  element.hpp  errors  eventHandler.cpp  eventHandler.hpp  globalVars.hpp  globals.hpp  headers.hpp  main.cpp  mandelbrot.cpp  mandelbrot.hpp  renderer.cpp  renderer.hpp  utils.cpp  utils.hpp
